project(CPURT)

file(GLOB LIBRARY_PRIVATE_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.cpp
    ${CMAKE_CURRENT_SOURCE_DIR}/*.mm)

file(GLOB LIBRARY_PUBLIC_FILES
    ${CMAKE_CURRENT_SOURCE_DIR}/*.h)

set(CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY $<1:${PROJECT_SOURCE_DIR}/Bin/Release>)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG $<1:${PROJECT_SOURCE_DIR}/Bin/Debug>)

add_library(CPURT SHARED ${LIBRARY_PUBLIC_FILES} ${LIBRARY_PRIVATE_FILES})